2006-02-09  Yves Combe  <yves@ycombe.net>

	fix bug, change font size following level for memory operations activities.

	* src/boards/memory.c: (get_random_token), (start_board),
	(create_item), (compare_card):

2006-02-09  Yves Combe  <yves@ycombe.net>

	fix animation was launched after winning.
	add memory based mathematicals operations boards.

	* boards/Makefile.am:
	* boards/memory_add.xml.in:
	* boards/memory_add_minus.xml.in:
	* boards/memory_add_minus_mult_div.xml.in:
	* boards/memory_add_minus_mult_div_tux.xml.in:
	* boards/memory_add_minus_tux.xml.in:
	* boards/memory_add_tux.xml.in:
	* boards/memory_mult.xml.in:
	* boards/memory_mult_div.xml.in:
	* boards/memory_mult_div_tux.xml.in:
	* boards/memory_mult_tux.xml.in:
	* boards/memory_op_group.xml.in:
	* boards/memory_op_group_tux.xml.in:
	* src/boards/awele.c: (buttonClick):
	* src/boards/memory.c: (get_random_token), (start_board),
	(memory_destroy_all_items), (get_image), (create_item),
	(compare_card):

2006-02-08  Yves Combe  <yves@ycombe.net>

	fix depth search. Must not to be odd in best difference evaluation!

	* src/boards/awele_alphaBeta.c: (think):

2006-02-08  Yves Combe  <yves@ycombe.net>

	add a reset of item->canvas after destroy.

	* src/gcompris/anim.c: (gcompris_deactivate_animation):

2006-02-08  Yves Combe  <yves@ycombe.net>

	Some fix in animation api/usage.

	* src/boards/awele_alphaBeta.c: (think):
	* src/boards/py-mod-anim.c: (Animation_free), (AnimCanvas_free):
	* src/boards/python/gnumch.py:
	* src/gcompris/anim.c: (anim_tick):

2006-02-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/advanced_colors.c: (add_xml_data): fixed to check properly for long locale (e.g. pt_BR)
	* src/boards/read_colors.c: (add_xml_data), (parse_doc): -
	* src/boards/python/melody.py: added a dialog if run without sound fx activated
	  changed to use the reload icon instead of mouth sign for the repeat.

2006-02-07  Yves Combe  <yves@ycombe.net>
